Improvements on FLAC file generation. Improvements on Dictation window usability.

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -6,10 +6,15 @@ lblPatient=Paciente
 lblFacultative=Facultativo
 lblCentre=Centro
 
+TitleAskSave=Confirme para guardar los cambios
+
 Dictation.TitleEdit=Editando informe
 Dictation.TitleNew=Dictando nuevo informe
 Dictation.AskSave=¿Quiere guardar los cambios realizados en el informe antes de cerrarlo?
 Dictation.NewVersion=Esto creará una nueva versión del informe
 Dictation.TitleAskSave=Confirme antes de cerrar el informe
 Dictation.btnCreatePatient=Crear paciente
-Dictation.btnRecord=Grabar
+Dictation.btnStartRecord=Iniciar grabación
+Dictation.btnStopRecord=Finalizar grabación
+Dictation.btnPauseRecord=Pausar grabación
+Dictation.btnContinueRecord=Continuar grabación
