Concept view change concept elements.

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -18,3 +18,4 @@ Dictation.btnStartRecord=Iniciar grabación
 Dictation.btnStopRecord=Finalizar grabación
 Dictation.btnPauseRecord=Pausar grabación
 Dictation.btnContinueRecord=Continuar grabación
+Dictation.btnAnalyze=Terminar y analizar
