Updated concepts offset. Concept balloon visual functionality (TODO: save changes actually)

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -1,7 +1,7 @@
 lblBiased=Subjetivo
 lblUnbiased=Objetivo
-lblPlan=Plan
-lblImpression=Impresión
+lblPlan=Plan terapéutico
+lblImpression=Impresión médica
 lblPatient=Paciente
 lblFacultative=Facultativo
 lblCentre=Centro
