Errors in connection, login and creating report.

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -19,3 +19,8 @@ Dictation.btnStopRecord=Finalizar grabación
 Dictation.btnPauseRecord=Pausar grabación
 Dictation.btnContinueRecord=Continuar grabación
 Dictation.btnAnalyze=Terminar y analizar
+
+Error.InvalidLoginInfo=Usuario o contraseña inválidos.
+Error.SIIENotResponding=No se pudo conectar con el servidor SIIE.
+
+Warning.PatientNotSelected=Debe seleccionar el paciente primero
