WaitModal improved, some fixed in focus needed.

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -7,10 +7,12 @@ lblFacultative=Facultativo
 lblCentre=Centro
 
 TitleAskSave=Confirme para guardar los cambios
+TitleConfirmExit=Confirme para salir sin guardar
 
 Dictation.TitleEdit=Editando informe
 Dictation.TitleNew=Dictando nuevo informe
 Dictation.AskSave=¿Quiere guardar los cambios realizados en el informe antes de cerrarlo?
+Dictation.ConfirmExit=¿Quiere salir y perder todos los cambios realizados en el informe?
 Dictation.NewVersion=Esto creará una nueva versión del informe
 Dictation.TitleAskSave=Confirme antes de cerrar el informe
 Dictation.btnCreatePatient=Crear paciente
