--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -24,5 +24,6 @@ Dictation.btnAnalyze=Terminar y analizar
 
 Error.InvalidLoginInfo=Usuario o contraseña inválidos.
 Error.SIIENotResponding=No se pudo conectar con el servidor SIIE.
+Error.CouldNotCreateReport=No se pudo guardar el informe, fallo al comunicar con el SIIE.
 
 Warning.PatientNotSelected=Debe seleccionar el paciente primero
