Reworking report model.

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -6,6 +6,8 @@ lblPatient=Paciente
 lblFacultative=Facultativo
 lblCentre=Centro
 
+btnSave=Guardar
+
 TitleAskSave=Confirme para guardar los cambios
 TitleConfirmExit=Confirme para salir sin guardar
 
