--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -27,5 +27,7 @@ Dictation.btnAnalyze=Terminar y analizar
 Error.InvalidLoginInfo=Usuario o contraseña inválidos.
 Error.SIIENotResponding=No se pudo conectar con el servidor SIIE.
 Error.CouldNotCreateReport=No se pudo guardar el informe, fallo al comunicar con el SIIE.
+Error.CouldNotUpdateReport=No se pudo actualizar el informe, fallo al comunicar con el SIIE.
+Error.InternalError=Hubo un error inesperado. Inténtelo nuevamente.
 
 Warning.PatientNotSelected=Debe seleccionar el paciente primero
