--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -7,6 +7,8 @@ lblFacultative=Facultativo
 lblCentre=Centro
 
 btnSave=Guardar
+btnFinalize=Finalizar
+btnReanalize=Analizar cambios
 
 TitleAskSave=Confirme para guardar los cambios
 TitleConfirmExit=Confirme para salir sin guardar
