Persistence Engine for ShowReport. Global Factory for model and controller.

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -12,6 +12,7 @@ btnReanalize=Analizar cambios
 
 TitleAskSave=Confirme para guardar los cambios
 TitleConfirmExit=Confirme para salir sin guardar
+TitleConfirm=Confirme acción
 
 Dictation.TitleEdit=Editando informe
 Dictation.TitleNew=Dictando nuevo informe
@@ -33,3 +34,10 @@ Error.CouldNotUpdateReport=No se pudo actualizar el informe, fallo al comunicar 
 Error.InternalError=Hubo un error inesperado. Inténtelo nuevamente.
 
 Warning.PatientNotSelected=Debe seleccionar el paciente primero
+
+Persistence.askRestore=Existe una sesión de %type que se ha cerrado inesperadamente ¿Que quiere hacer con ella?
+Persistence.btnDelete=Eliminar
+Persistence.btnCancel=Decidir más tarde
+Persistence.btnOpen=Restaurar
+Persistence.org.sigaim.csig.view.ShowReport=edición de informe
+Persistence.org.sigaim.csig.view.Dictation=dictado
