ShowReporto styling fixed main display.

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -1,6 +1,7 @@
 Yes=Si
 No=No
 Cancel=Cancelar
+OK=OK
 
 lblBiased=Subjetivo
 lblUnbiased=Objetivo
@@ -13,6 +14,7 @@ lblCentre=Centro
 btnSave=Guardar
 btnFinalize=Finalizar
 btnReanalize=Analizar cambios
+btnClose=Cerrar
 
 TitleAskSave=Confirme para guardar los cambios
 TitleConfirmExit=Confirme para salir sin guardar
