Fixes in ShowReport Behaviors & CSIGDialog.YesNoCancel

--- a/src/org/sigaim/csig/resources/lang/Text.properties
+++ b/src/org/sigaim/csig/resources/lang/Text.properties
@@ -33,6 +33,10 @@ Dictation.btnPauseRecord=Pausar grabación
 Dictation.btnContinueRecord=Continuar grabación
 Dictation.btnAnalyze=Terminar y analizar
 
+ShowReport.strAskSave=¿Quiere guardar los cambios realizados?
+ShowReport.strNewVersion=Esto creará una nueva versión del informe 
+ShowReport.strTitleAskSave=Confirme antes de cerrar el informe
+
 Error.InvalidLoginInfo=Usuario o contraseña inválidos.
 Error.SIIENotResponding=No se pudo conectar con el servidor SIIE.
 Error.CouldNotCreateReport=No se pudo guardar el informe, fallo al comunicar con el SIIE.
